# bi_daily_pipeline_car_crash

./: Dockerfile  README.md  auth_dashboard.py  build-docker.sh  dash_setup.py  dashboard.py  no_auth_dashboard.py  pyproject.toml  side_bar.yaml  usr.yaml  util.py
.github/workflows/: build-dev.yaml  build_release.yaml
.streamlit/: config.toml
page_configs/: full_demo.json
page_modules/: about.py  how.py
