[tool.poetry]
name = "bi-daily-pipeline-car-crash"
version = "0.1.0"
description = "business intelligence for chicago car crashes"
authors = ["vishnu rao"]
license = "mit license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlana = "0.1.4"
streamlit-authenticator = "0.4.2"


[tool.poetry.group.dev.dependencies]
black = "25.1.0"
isort = "6.0.1"
flake8-bugbear = "24.12.12"
flake8 = "7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
